# OmegaGo

./: .gitignore  .gitmodules  LICENSE  NetInput.hpp  README.md  build-latedays.sh  build.sh  commit.sh  compress-archive.sh  jpdoyle-cert.pem  latedays-train-deep.sh  latedays-train3.sh  latedays-train4.sh  latedays-train5.sh  latedays-train6.sh  latedays-worker.sh  osx-worker.sh  repeat-train.sh  repeat-work.sh  requirements.txt  run-demo-worker.sh  run-server.sh  run-worker.sh  runtraining.sh  trainAccs.txt  trainTimes.txt  training.sh  update-contrib.sh  vim-fix-quotes.txt  watch-ghc.sh
analysis/: convert_game_times.m  convert_train_times.m  make_win_matrix.m  nn_training_accuracy_v_time.fig  players_extraction_script.m  plot_game_speed.m  process_tourney_results.py  tests-jpoyle.net.csv  trainTimes.m  trainTimes.txt  win_matrix.numbers
report/: omegago-proposal.html  omegago.html
server/: aicontrol.py  hello.py  (+3 more)
sgf-parse/: CMakeLists.txt  Makefile  boardtest.txt  mcts-crash.sgf  parsetest.sh  pass-game.txt  silly.sgf  stupid.sgf  test.sgf
sgf-parse/src/: AsyncPolicy.hpp  Board.cpp  Board.hpp  Bot.cpp  Bot.hpp  Features.cpp  Features.hpp  GameServer.cpp  GameServer.hpp  LockedAtomicVector.hpp  MonteCarloTree.cpp  MonteCarloTree.hpp  PolicyNet.hpp  Sgf.cpp  Sgf.hpp  Util.hpp  main.cpp
sgf-parse/testgames/: 21fd6115-56fc-462a-8633-9d6aa6198ea0.sgf  6dab2f98-858d-42ac-840e-d7b8c60c846d.sgf  8173ef9f-fd37-4de2-a0c6-5e70c2177c67.sgf  9c6354bd-d600-4b11-8682-cf591be2c939.sgf  9e07eeaf-9f35-49f8-ac3e-1db4c004c728.sgf  ce6dced4-7463-4a4f-a473-3b47a6379101.sgf
(+67 files in other folders)
